# budgie-desktop-view

./: .gitignore  CODEOWNERS  README.md  meson.build  meson_options.txt  mkrelease.sh
.github/workflows/: alpine.yml  build.yml  ubuntu.yml
.tx/: config
data/: budgie-desktop-view.gresource.xml  meson.build  org.buddiesofbudgie.budgie-desktop-view.desktop.in  org.buddiesofbudgie.budgie-desktop-view.gschema.xml  us.getsol.budgie-desktop-view.desktop.in  us.getsol.budgie-desktop-view.gschema.xml  view.css
nix/: default.nix  flake.nix  shell.nix
po/: LINGUAS  budgie-desktop-view.pot  cs.po  en_GB.po  en_US.po  es.po  es_MX.po  fr.po  he.po  ja.po  ja_JP.po  ka.po  ko.po  lt.po  meson.build  ms_MY.po  oc.po  pt_BR.po  pt_PT.po  ru.po  sq.po  tr.po  uk.po  vi_VN.po  zh.po  zh_CN.po
scripts/: mesonPostInstall.sh  updatePot.sh
src/: application.vala  budgie_desktop_view.vala  desktop_item.vala  desktop_menu.vala  file_item.vala  file_menu.vala  menu.vala  meson.build  mount_item.vala  unified_props.vala
